# facenet-cli

./: .gitignore  README.md  pyproject.toml  setup.py
cli_anything/facenet/: __main__.py  cli.py
cli_anything/facenet/core/: __init__.py  recognition.py
cli_anything/facenet/tests/: TEST.md  test_core.py  test_full_e2e.py
cli_anything/facenet/utils/: __init__.py  backend.py  embedded_backend.py
skills/facenet-cli/: SKILL.md
