[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facenet-cli"
version = "1.0.0"
description = "CLI harness for facenet-pytorch workflows."
requires-python = ">=3.13"
dependencies = [
  "click>=8.1.0",
  "prompt-toolkit>=3.0.0",
  "facenet-pytorch>=2.5.0",
  "opencv-python>=4.8.1.78",
  "matplotlib>=3.10.0",
  "pillow>=10.4",
  "numpy>=1.24.0",
]

[project.scripts]
fnet = "cli_anything.facenet.cli:main"

[tool.setuptools.packages.find]
include = ["cli_anything.*"]
